# LeastSquarePackage

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  appveyor.yml
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  FindEigen.cmake  Findgflags.cmake.in  Findglog.cmake.in  StartVS.bat.in  SuperBuild.cmake  mpExternalProjectHelperMacros.cmake
CMake/ExternalProjects/: Boost.cmake  Eigen.cmake  OpenCV.cmake  VTK.cmake  gflags.cmake  glog.cmake
Code/: CMakeLists.txt
Code/Apps/: CMakeLists.txt  lsqComputeRotTrans.cpp  lsqMyFirstApp.cpp
Code/Gui/: CMakeLists.txt
Code/Lib/: CMakeLists.txt  lsqBasicTypes.cpp  lsqBasicTypes.h  lsqComputeRotation.cpp  lsqComputeRotation.h  lsqLeastSquare3D.cpp  lsqLeastSquare3D.h  lsqMyFunctions.cpp  lsqMyFunctions.h  lsqWin32ExportHeader.h
Documentation/: CMakeLists.txt  License.dox  MainPage.dox.in
Example/: true_rotation_translation.txt
Testing/: CMakeLists.txt  lsqBasicTest.cpp  lsqCatchMain.cpp  lsqCatchMain.h  lsqCommandLineArgsTest.cpp  lsqComputeRotationTest.cpp  lsqLeastSquare3DTest.cpp  lsqReadFileTest.cpp
Testing/Data/: first_set_points_test.txt  rotation_test.txt  second_set_points_test.txt  translation_test.txt
Utilities/CppCheck/: LEASTSQUARESPACKAGECppCheck.cmake
Utilities/Doxygen/: doxygen.config.in  leastsquarespackagedoxygen.pl.in
Utilities/KWStyle/: LEASTSQUARESPACKAGEHeader.h  LEASTSQUARESPACKAGEKWS.xml.in  LEASTSQUARESPACKAGEKWStyle.cmake
